<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:animateLayoutChanges="true"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".CoffeeActivity">

    <LinearLayout android:id="@+id/checked_view"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:animateLayoutChanges="true"
                  android:gravity="center"
                  android:orientation="vertical"
                  android:visibility="gone">

        <TextView style="@style/title_text"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/welcome_back"/>

        <TextView android:id="@+id/status_msg"
                  style="@style/mega_text"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/online"/>

        <EditText android:id="@+id/set_url_text"
                  android:layout_width="match_parent"
                  android:hint="@string/set_url"
                  android:text="http://darrien.ddns.net"
                  android:layout_height="wrap_content"/>

        <Button android:id="@+id/action_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:drawableStart="@drawable/ic_coffee"
                android:text="@string/brew"/>

    </LinearLayout>

    <LinearLayout android:id="@+id/init_view"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:animateLayoutChanges="true"
                  android:gravity="center"
                  android:orientation="vertical">

        <TextView android:id="@+id/loading_msg"
                  style="@style/mega_text"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/loading_message"/>

        <ProgressBar android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>
